--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
 <div class="main-title">
-  <h4>Проектирование, монтаж, наладка, техническое обслуживание ИТСО. Экзамен МВД.</h4>
+  <u><h4>Проектирование, монтаж, наладка, техническое обслуживание ИТСО. Экзамен МВД.</h4></u>
 </div>
 <div class="quiz-container">
   <div id="question-number"></div>
+  <div id="results"></div>
   <div id="quiz">
     <div id="answers-buttons"></div>
   </div>
   <button id="next">Далее</button>
   <button id="restart">Заново</button>
-  <div id="results"></div>
 </div>
 <script src="script.js"></script>
 </body>
