--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="main-title">
-  <u><h4>Проектирование, монтаж, наладка, техническое обслуживание ИТСО. Экзамен МВД.</h4></u>
+  <u><h4>Проектирование, монтаж, наладка, техническое обслуживание ИТСО. <br>Экзамен МВД.</br></h4></u>
 </div>
 <div class="quiz-container">
   <div id="question-number"></div>
