--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <div class="main-title">
   <u><h4>Проектирование, монтаж, наладка, техническое обслуживание ИТСО. <br>Экзамен МВД.</br></h4></u>
+  <img class="logo-img" src="logo.jpg" alt="logo">
 </div>
 <div class="quiz-container">
   <div id="question-number"></div>
