Add Trainig and Exam types of Tests

--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
   <div id="quiz">
     <div id="answers-buttons"></div>
   </div>
-  <button id="next">Далее</button>
-  <button id="restart">Заново</button>
+  <div class="main-buttons">
+    <button id="exam">Экзамен</button>
+    <button id="training">Тренировка</button>
+  </div>
+  <button id="next" style="display: none;">Далее</button>
+  <button id="restart" style="display: none;">Главное меню</button>
 </div>
 <script src="script.js"></script>
 </body>
