--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="main-title">
-  <u><h4>Проектирование, монтаж, наладка, техническое обслуживание ИТСО. <br>Экзамен МВД.</br></h4></u>
+  <u><h4 id='title'>Проверка знаний специалистов по ТО ИТСО</h4></u>
   <img class="logo-img" src="logo.jpg" alt="logo">
 </div>
 <div class="quiz-container">
@@ -18,8 +18,10 @@
     <div id="answers-buttons"></div>
   </div>
   <div class="main-buttons">
-    <button id="exam">Экзамен</button>
-    <button id="training">Тренировка</button>
+    <button id="mvd-tests">Вопросы Департамента охраны МВД</button>
+    <button id="gazprom-tests">Техучеба специалистов по ТО ИТСО</button>
+    <button id="exam" style="display: none;">Экзамен</button>
+    <button id="training" style="display: none;">Проверка знаний</button>
   </div>
   <button id="next" style="display: none;">Далее</button>
   <button id="restart" style="display: none;">Главное меню</button>
