--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <button id="next" style="display: none;">Далее</button>
   <button id="restart" style="display: none;">Главное меню</button>
 </div>
+<footer>© ЛСПАиО ИТЦ<br>2024</br></footer>
 <script src="script.js"></script>
 </body>
 </html>
