add modal window for Exam-mode, add Readme, add question

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="main-title">
-  <u><h4 id='title'>Проверка знаний специалистов по ТО ИТСО</h4></u>
+  <h4 id='title'>Проверка знаний специалистов по ТО ИТСО</h4>
   <img class="logo-img" src="logo.jpg" alt="logo">
 </div>
 <div class="quiz-container">
@@ -26,6 +26,16 @@
   <button id="next" style="display: none;">Далее</button>
   <button id="restart" style="display: none;">Главное меню</button>
 </div>
+  <!-- Modal Window -->
+  <div id="modal">
+    <div class="modal-content">
+      <h2>Начинается проверка знаний.</h2>
+      <h3>Желаем успеха!</h3>
+      <p>Вам будет предложено 10 вопросов.<br>Подтверждение ответа на вопрос осуществляется путем нажатия на один из
+        предложеных вариантов.</br></p>
+      <button id="modal-button">Начать экзамен</button>
+    </div>
+  </div>
 <footer>© ЛСПАиО ИТЦ<br>2024</br></footer>
 <script src="script.js"></script>
 </body>
