applied prettier, code fix

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Тест</title>
+<title>Тест по ИТСО</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,11 +20,11 @@
   <div class="main-buttons">
     <button id="mvd-tests">Вопросы Департамента охраны МВД</button>
     <button id="gazprom-tests">Техучеба специалистов по ТО ИТСО</button>
-    <button id="exam" style="display: none;">Экзамен</button>
-    <button id="training" style="display: none;">Проверка знаний</button>
+    <button id="exam">Экзамен</button>
+    <button id="training">Проверка знаний</button>
   </div>
-  <button id="next" style="display: none;">Далее</button>
-  <button id="restart" style="display: none;">Главное меню</button>
+  <button id="next">Далее</button>
+  <button id="restart">Главное меню</button>
 </div>
   <!-- Modal Window -->
   <div id="modal">
